--- a/newProj2.html
+++ b/newProj2.html
@@ -4,7 +4,7 @@
 <!--	Name: Cristian Macias
 Course:	235.01
 HomeWork:	#2
-Git-Hub:	https://github.com/yourName/yourHomeWork
+Git-Hub:	https://github.com/Cristian5505/HW2
 -->		
 <style type="text/css">
 <!--
@@ -36,7 +36,7 @@ button.b{color: #F5E6E3; background-color: #5F00CA; margin-right: 20px;}
  var threes=0;
  var fours=0;
  var yahtzees=0;
- 
+
  //restarts the game
  function restart(){
     threes=0;
